[package]
name = "spbench"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2"
# TODO: Replace with version 0.12 (read complex MatrixMarket support)
sprs = { git = "https://github.com/sparsemat/sprs", rev = "9875143" }
num-complex = "0.4"
approx = "0.5"
rayon = "1.5"

amd = "0.2"
rlu = { version = "=0.4.2", features = ["rayon"] }

klu_sys = "0.2"


lufact = "0.1"

cpuprofiler = "0.0.4"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "order_benchmark"
harness = false

[[bench]]
name = "factor_benchmark"
harness = false

[[bench]]
name = "par_solve_benchmark"
harness = false
